update navbar and styling of the navbar

--- a/pre-academy-homework/index.html
+++ b/pre-academy-homework/index.html
@@ -22,7 +22,7 @@
             <div>
                 <ul class="nav navbar-nav navbar-left">
                     <li><img src="img/ninja.png" id="ninja" width="80" height="80" class="ninja align-center" alt=""></li>
-                    <li>Paulina Grunwald</li>
+                    <li class="banner">Paulina Grunwald - Aspiring Web Dev Ninja :)</li>
                 </ul>
             </div>
 \
