--- a/pre-academy-homework/index.html
+++ b/pre-academy-homework/index.html
@@ -6,7 +6,9 @@
       <title></title>
       <meta name="Paulina Grunwald's website" content="about Paulina">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet"> 
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/main.css">
@@ -14,42 +16,41 @@
   <body>
     <!-- NAVBAR -->
     <nav id="main-nav" class="navbar navbar-full navbar-dark navbar-fixed-top">
-      <button type="button" class="navbar-toggler hidden-sm-up hidden-xs-down  float-xs-right" data-toggle="collapse" data-target="#minimenu"> 
-          <span class="navbar-toggler-icon "><i class="fa fa-bars" aria-hidden="true"></i></span>
-      </button>   
-        <div id="minimenu" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav text-uppercase">
-            <li class="nav-item active"><a href="#main" class="nav-link active">About me</a></li>
-            <li class="nav-item"><a href="#expertise" class="nav-link">Expertise</a></li>
-            <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-          </ul> 
-        </div>
+        <button type="button" class="navbar-toggler hidden-sm-up hidden-xs-down  float-xs-right" data-toggle="collapse" data-target="#minimenu"> 
+            <span class="navbar-toggler-icon "><i class="fa fa-bars" aria-hidden="true"></i></span>
+        </button>   
+          <div id="minimenu" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav text-uppercase">
+                  <li class="nav-item active"><img src="img/ninja.png" class="icon" height="20%" width="auto"></li>
+                  <li class="nav-item"><a href="#about" class="nav-link active">About me</a></li>
+                  <li class="nav-item"><a href="#hobbies" class="nav-link">Hobbies</a></li>
+                  <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+              </ul> 
+          </div>
     </nav>
-    <!-- TITLE -->
+    <!-- CONTENT -->
     <div class="container">
-      <div class="row" id="title">
+      <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12">
             <h1 class="quote">Commited to develop quality code while having fun!</h1>
         </div>
       </div>
-
-      <div class = "row" id="about">
+      <div class ="row" id="about">
           <div class="title"><h2>About me</h2></div>
       </div>
       <div class = "row" id="about">
           <div class="col-md-4 col-lg-4">
-              <img src="img/paulina2.jpg" width="80%" height="80%" class="thumbnail img-responsive" alt="paulina">
+              <img src="img/paulina2.jpg" class="thumbnail img-responsive" alt="paulina">
           </div>
           <div class="col-md-8  col-lg-8">
-              <p class="text">My name is Paulina and I love coding! For past 8 years i have been working in the oil&gas industry. I spent a lot of time on the drilling rigs and production platforms. About 2 years ago i have discovered my passion for coding. I have started with learning python and data analytics and then switch to web development. I enjoy learning new things. </p>
+              <p class="text">My name is Paulina and I am from Poland. For past 8 years I have been working in the oil&gas industry. I spent a lot of time on the drilling rigs and production platforms. About 2 years ago i have discovered my passion for coding. I have started with learning python and data analytics and then switch to web development. I enjoy learning new things.</p>
 
-              <p class="text">My name is Paulina Grunwald. I am project Engineer with 7 years of experience in Oi&Gas industry. I am skilled in mudlogging, logging, coring, hydraulic fracturing, offshore operations, project management and data analytics. I have worked in the Netherlands, Poland and Romania. I am IASSC Green Belt Lean Six Sigma certified. Over the years I have developed a passion for data analytics, Python and R programming, machine learning, predictive analytics and web development. I speak fluently Polish, Romanian and English. I am currently learning Japanese.</p>
+              <p class="text">Although most of my career I have been working in oil&gas industry I have developed passion for software development and programming. In 2017 I have completed Udacity Data Analyst Nanodegree during which I have gain various skills e.g programming in Python and R, machine learning, creating engaging web vizualization in D3.js and advanced statistics.</p>
           </div>
       </div>
       <div class = "row">
         <div class="col-md-12 col-lg-12">
-          <h1>Me at work!</h1>
+          <p class="work-image">Few pictures of me on the oil&gas rigs!</p>
       </div>
       <div class = "row">
          <div class="col-md-4 col-lg-4">
@@ -63,19 +64,21 @@
           </div>
       </div>
 
-      <div class = "row" id="expertise">
-          <div class="col-md-12 col-sm-12 col-lg-12 title">
-            <h2>Hobbies</h2>
-            <p class="text">Although most of my career I have been working in oil&gas industry I have developed passion for software development and programming. In 2017 I have completed Udacity Data Analyst Nanodegree during which I have gain various skills e.g programming in Python and R, machine learning, creating engaging web vizualization in D3.js and advanced statistics. Currently, I am following Udacity Full Stack Web Developer Nanodegree where I am learning about HTML, CSS, responsive website design, JavaScript&Ajax, databases and deploying to Linux Servers. I am also developing skills in Blockchain technology and currently learning Ethereum solidity programming language.</p>
+      <div class = "row" id="hobbies">
+          <div class="col-md-12 col-sm-12 col-lg-12">
+            <div class="title"> 
+              <h2>Hobbies&Favourites</h2>
+            </div>
+            <p class="text"> I have many hobbies. I wish I had more time to devote to each of them. I enjoy music a lot. Not only I listen to the music but i also play guitar and bass. I like going for a long runs and spend time outdoors.  Needles to say i love coding!</p>
           </div>
       </div>
-      <div class = "row" id="expertise">
-          <div class="col-md-3 col-sm-6 col-lg-3">
+      <div class="row hobbies-list">
+          <div class="col-md-6 col-sm-6 col-lg-3">
               <div class="card">
                   <div class="card-block text">
                       <h4 class="card-title">Music</h4>           
                   </div> 
-                  <div class="card-block text-center">
+                  <div class="card-block text">
                       <img src="img/bass.jpg" class="rounded mx-auto d-block" alt="bass guitar">
                       <p class="card-text text">I love music. I play bass and guitar. I like listetning to funk, rock.</p>
                   </div>
@@ -86,7 +89,7 @@
                   <div class="card-block text">
                       <h4 class="card-title">Sports</h4>
                   </div> 
-                  <div class="card-block text-center">
+                  <div class="card-block text">
                       <img src="img/sport.jpg" class="rounded mx-auto d-block" alt="bass guitar">
                       <p class="card-text text">I love music. I play bass and guitar. I like listetning to funk, rock.</p>
                   </div>
@@ -94,23 +97,23 @@
           </div>
           <div class="col-md-6 col-sm-6 col-lg-3">
               <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title">Coding</h4>
+                  <div class="card-block text">
+                    <h4 class="card-title">Drawing&Painting</h4>
                   </div> 
-                  <div class="card-block text-center">
+                  <div class="card-block text">
                       <img src="img/bass.jpg" class="rounded mx-auto d-block" alt="bass guitar">
-                      <p class="card-text text-center">I love music. I play bass and guitar. I like listetning to funk, rock.</p>
+                      <p class="card-text text">I like drawing using pencils and painting with watercolors and gouache.</p>
                   </div>
               </div>
           </div>
-          <div class="col-md-6 col-sm-6 col-lg-3">
+          <div class="col-md-3 col-sm-3 col-lg-3">
               <div class="card">
-                  <div class="card-block">
+                  <div class="card-block text">
                     <h4 class="card-title">Coding</h4>
-                  </div> 
-                    <img src="img/sport.jpg" class="rounded mx-auto d-block" alt="bass guitar">
-                  <div class="card-block">
-                    <p class="card-text text">I have passion for coding.</p>
+                  </div>
+                  <div class="card-block text"> 
+                    <img src="img/sport.jpg" class="rounded mx-auto d-block" alt="coding">
+                    <p class="card-text text">I have passion for coding. I like Python and JavaScript.</p>
                   </div>
               </div>
           </div>
@@ -130,17 +133,15 @@
       </div>
         <div class="row">
           <div class="col-md-12 col-lg-12 col-sm-12">
-              <p class="footer display-block">Paulina Grunwald Copyright ©2017. All rights reserved.</p>
+              <p class="footer display-block">Paulina Grunwald Copyright ©2018. All rights reserved.</p>
           </div>
       </div>
-    </div>
-
-    </div> <!-- /container -->        
+    </div>       
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
   </body>
