Update exercise files

--- a/Week-1/day01-javascript-basics/index.html
+++ b/Week-1/day01-javascript-basics/index.html
@@ -3,7 +3,9 @@
   <body>
     Hello!
     <script>
-     	document.write("Hello World");
+     	window.alert("Hello World");
+      document.write("This is the first day of the bootcamp!");
     </script>
+    <script src="getting-started.js" charset="utf-8"></script>
   </body>
 </html>
