--- a/Week-1/day02-javascript-basics2/functions.html
+++ b/Week-1/day02-javascript-basics2/functions.html
@@ -4,7 +4,7 @@
 
 <script>
 function printMessage() {
-    return "Paulina Grunwalda!";
+    return "Paulina Grunwald!s!";
 }
 document.write( printMessage() );
 </script>
