update counter function

--- a/Week-1/day04-DOM/todo-app/index.html
+++ b/Week-1/day04-DOM/todo-app/index.html
@@ -101,7 +101,22 @@
   </div>
 
   <script>
-  	// JavaScript code comes here...
+    function updateCounters() {
+  // Total number of todos
+      var totalCount = document.getElementById('total-count');
+      var totalTodos = document.getElementsByClassName("todo").length;
+      totalCount.innerHTML = totalTodos;
+
+      // Total number of completed todos
+      var completedCount = document.getElementById('completed-count');
+      var completedTodos = document.getElementsByClassName("completed").length;
+      completedCount.innerHTML = completedTodos;
+
+      // Total number of uncompleted todos
+      var todoCount = document.getElementById('todo-count');
+      var uncompletedTodos = totalTodos - completedTodos;
+      todoCount.innerHTML = uncompletedTodos;
+    }
   </script>
 
 </body>
