update exercises day 4

--- a/Week-1/day04-DOM/todo-app/index2.html
+++ b/Week-1/day04-DOM/todo-app/index2.html
@@ -12,6 +12,11 @@
       <button id="button" onclick="addToList()">Add task</button>
     <ul id="todolist">
     </ul>
+    <div class = "counter">
+      Total number of tasks: <div id="total-count"></div>
+      To do: <div id ="not-completed-count"></div>
+      Completed: <id class="completed-count"></div>
+    </div>
   </div>
   <script src="main.js"></script>
 
