update exercises from week 2 and 3

--- a/Week-2/day06-OOP-JS-Modules/index.html
+++ b/Week-2/day06-OOP-JS-Modules/index.html
@@ -2,5 +2,7 @@
     <head>
         <script src="index.js"></script>
         <script src="greeting.js"></script>
+        <script src="./bundle.js"></script>ls
+        
     </head>
 </html>
